# avr-usb-gameport

./: .gitignore  CMakeLists.txt  USB_descriptor.hid  generic-gcc-avr.cmake
src/: CMakeLists.txt  analog_read.c  hwinit.c  joystick.c  main.c  usb_descriptor.c
src/include/: analog_read.h  hwinit.h  joystick.h  usb_descriptor.h
usbdrv/: CMakeLists.txt  usbconfig.h
